<resources>
    <string name="app_name">weather app</string>
    <string name="title_home">Home page</string>
    <string name="title_welcome">Welcome</string>
    <string name="first_time_welcome_phrase">welcome, this application helps you to know the weather minute by minute</string>
    <string name="next">Next</string>
    <string name="location_pick_instruction">you will need to specify your location so as show the weather of your location</string>
    <string name="get_weather_by_location">get weather by GPS</string>
    <string name="get_weather_by_map">get weather by map</string>
    <string name="get_weather_by_city">get weather by city</string>
    <string name="visibility">Visibility</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="cloud">cloud</string>
    <string name="wind">wind</string>
    <string name="humidity">humidity</string>
    <string name="pressure">pressure</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>


    <string name="english">English</string>
    <string name="arabic">Arabic</string>


    <!-- Preference Titles -->

    <!-- Messages Preferences -->
    <string name="choose_application_language">Choose application Language</string>

    <!-- Sync Preferences -->
    <string name="language">language</string>
    <string name="format">format</string>
    <string name="choose_temperature">Choose temperature</string>

    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed">Wind speed</string>
    <string name="choose_wind_speed">choose wind speed</string>
    <string name="notification">notification</string>

    <string name="no_stored_data">no stored data</string>
    <string name="need_internet">error need internet connection</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tus</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">thu</string>
    <string name="friday">Fri</string>
    <string name="about_phrase">this app made under the copy right of ITI @ EG \n under supervision of Eng/Ahmed Mazen and Eng/Heba \n I wish you taset new experience and be happy :)</string>
    <string name="feature_not_available">this feature not available ;)</string>
    <string name="picked_location" translatable="false">Picked_location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="map">map</string>
    <string name="favourite_map">favourite map</string>
    <string name="city_picked">city picked</string>
    <string name="percent_qoutation">%</string>
    <string name="hpa_qoutation">hpa</string>
    <string name="meter">meter</string>
    <string name="unit_kelvin">°K</string>
    <string name="unit_celsuis">°C</string>
    <string name="unit_fahrenhiet">°F</string>
    <string name="meter_per_sec">M/S</string>
    <string name="mile_per_hour">M/H</string>
    <string name="permission_granted">permission granted</string>
    <string name="need_permission">need permission</string>
    <string name="permission_already_granted">permission already granted</string>
    <string name="use_another_way">use another way to fetch for weather</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="need_permissions_to_continue">Some permissions are required to continue</string>
    <string name="enable_gps">Enable gps or use another way</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm">Alarm</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="save">Save</string>
    <string name="cannot_choose_past">Can\'t pick time in past</string>
    <string name="end_time_cannot_be_before_start">end time can\'t be before start date</string>
    <string name="channel_name" translatable="false">egItIGov</string>
    <string name="channel_description" translatable="false">WeatherApp</string>
    <string name="iti_weather_app" translatable="false">ITI WeatherApp</string>
    <string name="every_thing_is_ok">Every thing is fine in your location , Remeber Always check weather for your safty</string>
    <string name="watch_out_disaster">WATCH out Disaster</string>
    <string name="first_time" translatable="false">first</string>
    <string name="preference_first">first</string>


</resources>