<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
android:id="@+id/home_drawer_menu"
        android:checkableBehavior="single"
        android:enabled="true"
        android:checked="true">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/navigation_favourite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourites" />


        <item
            android:id="@+id/navigation_alert"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/alerts" />

        <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_baseline_read_more_24"
            android:title="@string/about" />

    </group>
        </menu>