<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.ui.location.PickLocationFragment">


    <TextView
        android:id="@+id/pickLocation"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/location_pick_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gpsLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/get_weather_by_location"
        app:layout_constraintEnd_toEndOf="@+id/pickLocation"
        app:layout_constraintStart_toStartOf="@+id/pickLocation"
        app:layout_constraintTop_toBottomOf="@+id/pickLocation" />

    <Button
        android:id="@+id/mapLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/get_weather_by_map"
        app:layout_constraintEnd_toEndOf="@+id/gpsLocation"
        app:layout_constraintStart_toStartOf="@+id/gpsLocation"
        app:layout_constraintTop_toBottomOf="@+id/gpsLocation" />

    <Button
        android:id="@+id/cityLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/get_weather_by_city"
        app:layout_constraintEnd_toEndOf="@+id/mapLocation"
        app:layout_constraintStart_toStartOf="@+id/mapLocation"
        app:layout_constraintTop_toBottomOf="@+id/mapLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>
